simple-observability/overlays/dev/netpol-allow-ingress-nginx-to-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-kibana
  namespace: simple-observability
spec:
  podSelector:
    matchLabels:
      kibana.k8s.elastic.co/name: simple-kibana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5601
